--- a/Virtual_hand_mouse.ipynb
+++ b/Virtual_hand_mouse.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import mediapipe as mp\n",
     "import pyautogui\n",
-    "import util # a separate .py file\n",
+    "import basics # a separate .py file\n",
     "from pynput.mouse import Button, Controller\n",
     "mouse = Controller()"
    ]
@@ -97,21 +97,6 @@
    "id": "c705f9a5-b05b-4377-b1c0-d2873252e337",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "def get_angle(a, b, c):\n",
-    "    radians = np.arctan2(c[1] - b[1], c[0] - b[0]) - np.arctan2(a[1] - b[1], a[0] - b[0])\n",
-    "    angle = np.abs(np.degrees(radians))\n",
-    "    \n",
-    "    return angle\n",
-    "def get_distance(landmarks_list):\n",
-    "    if len(landmarks_list) < 2:\n",
-    "        return\n",
-    "\n",
-    "    (x1, y1), (x2, y2) = landmarks_list[0], landmarks_list[1]\n",
-    "    L = np.hypot(x2 - x1, y2 - y1)\n",
-    "    return np.interp(L, [0, 1], (0, 1000))"
-   ]
   },
   {
    "cell_type": "code",
@@ -122,26 +107,26 @@
    "source": [
     "# Left Click conditions\n",
     "def is_left_click(landmarks_list, thumb_index_dist):\n",
-    "    return (get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) < 50 and \n",
-    "            get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) > 90 and\n",
+    "    return (basics.get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) < 50 and \n",
+    "            basics.get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) > 90 and\n",
     "           thumb_index_dist > 50)\n",
     "\n",
     "# Right Click conditions\n",
     "def is_right_click(landmarks_list, thumb_index_dist):\n",
-    "    return (get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) < 50 and \n",
-    "            get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) > 90 and\n",
+    "    return (basics.get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) < 50 and \n",
+    "            basics.get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) > 90 and\n",
     "           thumb_index_dist > 50)\n",
     "\n",
     "# Double click conditions\n",
     "def is_double_click(landmarks_list, thumb_index_dist):\n",
-    "    return (get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) < 50 and \n",
-    "            get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) < 50 and\n",
+    "    return (basics.get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) < 50 and \n",
+    "            basics.get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) < 50 and\n",
     "           thumb_index_dist > 50)\n",
     "\n",
     "# screenshot conditions\n",
     "def is_screenshot(landmarks_list, thumb_index_dist):\n",
-    "    return (get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) < 50 and \n",
-    "            get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) < 50 and\n",
+    "    return (basics.get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) < 50 and \n",
+    "            basics.get_angle(landmarks_list[9], landmarks_list[10], landmarks_list[12]) < 50 and\n",
     "           thumb_index_dist < 50)"
    ]
   },
@@ -157,9 +142,9 @@
     "    if len(landmarks_list) >= 21:\n",
     "        \n",
     "        index_finger_tip = find_finger_tip(processed) # Mouse movement is now based on the index finger tip\n",
-    "        thumb_index_dist = get_distance([landmarks_list[4], landmarks_list[5]])\n",
+    "        thumb_index_dist = basics.get_distance([landmarks_list[4], landmarks_list[5]])\n",
     "\n",
-    "        if thumb_index_dist < 50 and get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) > 90:\n",
+    "        if thumb_index_dist < 50 and basics.get_angle(landmarks_list[5], landmarks_list[6], landmarks_list[8]) > 90:\n",
     "            move_mouse(index_finger_tip)\n",
     "        \n",
     "        # Left Click\n",
